
[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.lints.rust]
missing_docs = "deny"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }

# errors
miette = { git = "https://github.com/zkat/miette", default-features = false, features = ["derive"] }
thiserror = { version = "2" }

# atomic-ish features
async-trait = { version = "0.1" }
serde_json = { version = "1" }
ulid = { version = "1", features = ["serde"] }

# tracing
tracing = { version = "0.1" }

# async
tokio = { version = "1", features = ["macros"] }
