[package]
name = "belt"
version = "0.1.0"

edition = "2024"
publish = false

[dependencies]
bytes.workspace = true
futures.workspace = true
tokio.workspace = true
tokio-util = { workspace = true, features = [ "io" ] }

[dev-dependencies]
tokio = { workspace = true, features = [ "rt-multi-thread", "io-util" ] }

[lints]
workspace = true
