[package]
name = "db-impl-postgres"
version = "0.1.0"

edition = "2024"
publish = false

[dependencies]
db-core = { path = "../db-core" }
model = { path = "../model" }

miette.workspace = true
serde_json.workspace = true
sqlx = { version = "0.8.6", features = ["postgres"] }
tracing.workspace = true

[lints]
workspace = true
