[package]
name = "db-impl-postgres"
version = "0.1.0"

edition = "2024"
publish = false

[dependencies]
db-core = { path = "../db-core" }
model = { path = "../model" }

async-trait.workspace = true
miette.workspace = true
serde_json.workspace = true
tracing.workspace = true

sqlx = { version = "0.8", default-features = false, features = [
  "postgres",
  "json",
  "macros",
  "runtime-tokio",
] }

[lints]
workspace = true
