[package]
edition = "2024"
name = "db"
version = "0.1.0"

[dependencies]
db-core = { path = "../db-core" }
db-impl-mock = { path = "../db-impl-mock" }
db-impl-postgres = { path = "../db-impl-postgres" }
model = { path = "../model" }

miette.workspace = true

[dev-dependencies]
serde.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }

[lints]
workspace = true
