[package]
name = "storage-core"
version = "0.1.0"

edition = "2024"
publish = false

[dependencies]
storage-types = { path = "../storage-types" }

async-trait.workspace = true
bytes.workspace = true
chrono.workspace = true
futures.workspace = true
miette.workspace = true
serde.workspace = true
thiserror.workspace = true

[lints]
workspace = true
