[package]
name = "storage-impl-fs"
version = "0.1.0"

edition = "2024"
publish = false

[dependencies]
storage-core = { path = "../storage-core" }

async-trait.workspace = true
bytes.workspace = true
chrono.workspace = true
futures.workspace = true
md5.workspace = true
miette.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = [ "fs" ] }
tracing.workspace = true

[dev-dependencies]
tempfile = "3.23"
tokio = { workspace = true, features = [ "rt-multi-thread" ] }

[lints]
workspace = true
