[package]
name = "storage"
version = "0.1.0"

edition = "2024"
publish = false

[dependencies]
storage-core = { path = "../storage-core" }
storage-impl-memory = { path = "../storage-impl-memory" }
storage-impl-s3 = { path = "../storage-impl-s3" }

generic-tests.workspace = true

[dev-dependencies]
bytes.workspace = true
futures.workspace = true
tokio = { workspace = true, features = [ "rt-multi-thread" ] }

[lints]
workspace = true
